4-react-nginx/deploy/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\data\MyTraining\React\12-react-dotnet-mvc-investigation\RESEARCH\6-docker-nginx-tutorial\my-test-docker-app\kompose-windows-amd64.exe convert -f docker-compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\data\MyTraining\React\12-react-dotnet-mvc-investigation\RESEARCH\6-docker-nginx-tutorial\my-test-docker-app\kompose-windows-amd64.exe convert -f docker-compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}



apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactnginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactnginx 
  template:
    metadata:
      labels:
        app: reactnginx
    spec:
      hostAliases:
      - ip: 45.79.245.110
        hostnames:
        - react-data-api
        - react-components-api
        - react-nginx-api
      containers:
      - image: pauljmartin16/react-nginx-image
        imagePullPolicy: Always
        name: reactnginx
        ports:
        - name: reactnginx
          containerPort: 80
