4-react-nginx/deploy/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-nginx-service
spec:
  rules:
  - host: react-nginx-api
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: reactnginx
            port: 
              number: 5200
